scripts/nullaway/original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:16: error: [NullAway] initializer method does not guarantee @NonNull field name (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Form(float a, float b, float c, float d, float e, float f, float weight, Color color) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:28: error: [NullAway] initializer method does not guarantee @NonNull field name (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Form(Triangle triangle, float weight, Color color) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:21: error: [NullAway] @NonNull field rangeMap not initialized
	protected RangeMap<Float, Form> rangeMap;
	                                ^
    (see http://t.uber.com/nullaway )
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/gui/JFlamGui.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Window window = null;
	               ^
    (see http://t.uber.com/nullaway )
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:15: error: [NullAway] initializer method does not guarantee @NonNull field writer (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public FlameLogger() {
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
5 errors
